--- a/table.html
+++ b/table.html
@@ -98,19 +98,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>19 ตุลาคม – 13 พฤศจิกายน 2508</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>เทพศิรินทร์ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>16 ตุลาคม – 1 พฤศจิกายน 2511</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>21 ตุลาคม – 7 พฤศจิกายน 2512</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -122,25 +122,25 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>22–30 ตุลาคม 2514</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ เทพศิรินทร์</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>20 ตุลาคม – 2 พฤศจิกายน 2516</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>ไม่มีการชิงชนะเลิศ</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>18 ตุลาคม – 2 พฤศจิกายน 2517</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>เทพศิรินทร์</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>24 ตุลาคม – 1 พฤศจิกายน 2521</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย แต่ในวันชิงชนะเลิศ ทั้ง 4 โรงเรียนได้ร่วมเป็นเจ้าภาพ โดยใช้สนามกีฬาจารุเสถียรเป็นสนามแข่งขัน</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย แต่ในวันชิงชนะเลิศ ทั้ง 4 โรงเรียนได้ร่วมเป็นเจ้าภาพ โดยใช้สนามกีฬาจารุเสถียรเป็นสนามแข่งขัน</td> 
                      <td>สวนกุหลาบวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -152,19 +152,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>27 พฤศจิกายน – 4 ธันวาคม 2525</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>20–25 พฤศจิกายน 2526</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>สวนกุหลาบวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>23 พฤศจิกายน – 1 ธันวาคม 2527</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>สวนกุหลาบวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -176,19 +176,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>19–26 ธันวาคม 2530</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>15–28 ธันวาคม 2532</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>อัสสัมชัญ</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>24–28 ธันวาคม 2534</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -200,19 +200,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>25 พฤศจิกายน – 2 ธันวาคม 2538</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ อัสสัมชัญ</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>13–20 ธันวาคม 2540</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>เทพศิรินทร์ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>111–19 ธันวาคม 2542</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>เทพศิรินทร์ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -224,19 +224,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>12 มกราคม – 18 มกราคม 2547</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>26 พฤศจิกายน – 3 ธันวาคม 2548</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>อัสสัมชัญ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>17–24 พฤศจิกายน 2550</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>อัสสัมชัญ</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -248,19 +248,19 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>10–17 พฤศจิกายน 2555</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>15– 22 พฤศจิกายน 2557</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>อัสสัมชัญ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>11–18 พฤศจิกายน 2560</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">กรุงเทพคริสเตียนวิทยาลัย</td> 
+                     <td style="background:linear-gradient(to right,purple,gold);">กรุงเทพคริสเตียนวิทยาลัย</td> 
                      <td>อัสสัมชัญ</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
@@ -272,13 +272,13 @@ height: 400px; width: 200px; float:left;">
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>11–18 พฤศจิกายน 2566</td>
-                     <td style="background:linear-gradient(to right,hotpink,skyblue);">เทพศิรินทร์</td> 
+                     <td style="background:linear-gradient(to right,green,yellow);">เทพศิรินทร์</td> 
                      <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
               </tr>
               <tr style="text-align:center; background-color:white;">
                      <td>1</td>
                      <td>15–22 พฤศจิกายน 2568</td>
-                     <td style="background:linear-gradient(to,right,hotpink,skyblue);">อัสสัมชัญ</td> 
+                     <td style="background:linear-gradient(to right,red,white);">อัสสัมชัญ</td> 
                      <td>เทพศิรินทร์​</td>
               </tr>
               
